--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-toastify": "^9.1.3",
     "redux-deep-persist": "^1.0.7",
     "redux-persist": "^6.0.0",
+    "sass": "^1.72.0",
+    "swiper": "^11.0.7",
     "yup": "^1.2.0"
   },
   "devDependencies": {
