--- a/package.json
+++ b/package.json
@@ -17,20 +17,23 @@
     "@emotion/styled": "^11.11.0",
     "@floating-ui/react": "^0.24.8",
     "@hookform/resolvers": "^3.1.1",
+    "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/styles": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.1",
-    "@tanstack/react-query": "^4.32.0",
-    "@tanstack/react-query-devtools": "^4.32.0",
+    "@tanstack/react-query": "^5.28.14",
+    "@tanstack/react-query-devtools": "^5.28.14",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "framer-motion": "^10.13.1",
+    "humps": "^2.0.1",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "npm": "^10.5.0",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.45.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.14.2",
