--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@tanstack/react-query-devtools": "^5.28.14",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "classnames": "^2.5.1",
+    "dompurify": "^3.0.4",
     "framer-motion": "^10.13.1",
     "humps": "^2.0.1",
     "install": "^0.13.0",
@@ -35,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.45.2",
+    "react-i18next": "^14.1.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
@@ -45,6 +48,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
