--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.28.14",
     "@tanstack/react-query-devtools": "^5.28.14",
+    "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.5.1",
@@ -41,10 +43,13 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
+    "react-virtualized": "^9.22.5",
     "redux-deep-persist": "^1.0.7",
     "redux-persist": "^6.0.0",
     "sass": "^1.72.0",
     "swiper": "^11.0.7",
+    "uuid": "^9.0.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
@@ -53,6 +58,7 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-virtualized": "^9.21.22",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "@vitejs/plugin-react": "^4.0.1",
