--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 BLOGGER_API_KEY=AIzaSyClYCBVAbMkK6MmQ24pf8lgJlbsSciNbY8
+REACT_APP_BLOG_API_KEY=AIzaSyClYCBVAbMkK6MmQ24pf8lgJlbsSciNbY8
+BLOG_ID=4669001375551211765
