--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.11",
     "dompurify": "^3.0.4",
     "framer-motion": "^10.13.1",
     "humps": "^2.0.1",
